--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <li>St. Marcs College. 3, Brethren Road, Ejigbo, Lagos.</li>
                 <li>Cadex Institute of Technology.</li>
             </ul> -->
-        <h3><a href="contact.html">CONTACT ME</a></h3>
+        <h3><a href="https://froshlit.github.io/My-Portfolio/" id="button">CONTACT ME</a></h3>
         <a href="https://github.com/FroshLit" target="_blank"><img src="img/git.jpg" width="30" height="30"></a>
         <img src="img/Tel.jpg" width="30" height="30" alt=""> <i><b>08121223333</b></i>
 </body>
